# ftx-rs

./: Cargo.toml  README.md
examples/: request.rs  websocket.rs
src/: client.rs  lib.rs  model.rs
src/client/: request.rs  websocket.rs
src/model/: fixed9.rs  websocket.rs
