[package]
name = "ftx-rs"
version = "0.1.0"
authors = ["Mikhail Babenko <misha-babenko@yandex.ru>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

failure = "0.1"
hmac = "0.10"
base64 = "0.13"
sha2 = "0.9"
hex = "0.4"

tokio = "1"
tokio-tungstenite = { version = "0.13", features = ["connect", "tls"] }
pin-project = "1"
futures = "0.3"

log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.8"
