[package]
name = "ftx-rs"
version = "0.1.0"
authors = ["Mikhail Babenko <misha-babenko@yandex.ru>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.1"
rust_decimal = { version = "1.16", features = ["serde-float","serde-arbitrary-precision"] }
rust_decimal_macros = "1.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"]}

anyhow = "1.0"
hmac = { version = "0.11", features = ["std"] }
base64 = "0.13"
sha2 = "0.9"
hex = "0.4"

tokio = "1"
tokio-tungstenite = { version = "0.15", features = ["connect", "tokio-rustls"] }
pin-project = "1"
futures = "0.3"

log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
